--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>Robyn Farah</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="//w3schools.com/lib/w3.css">
+<link rel="stylesheet" href="css/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <script src="script.js"></script>
     <link rel="stylesheet" href="css/stylesheet.css">
